--- a/Application/Home/View/default/Comment/default.html
+++ b/Application/Home/View/default/Comment/default.html
@@ -4,7 +4,7 @@
         border-bottom: 1px solid #eee;
     }
     .comment-box {
-        margin-top: 10px;
+        margin: 10px 0px;
     }
 </style>
 <div class="comment-list-box">
