--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -25,6 +25,9 @@
             float: left;
             margin: 20px 0 0 10px;
         }
+        .manual-box .manual-right header {
+            margin-bottom: 10px;
+        }
         .manual-box .manual-right header .title-link{
             font-size: 12px;
             line-height: 1.8;
@@ -227,7 +230,7 @@
         <!-- 文档右侧正文 -->
         <div class="col-xs-12 col-sm-10 manual-right">
             <!-- 文档右侧正文标题 -->
-            <header class="margin-bottom">
+            <header class="manual-title-box">
                 <h1 id="manual-title">序言</h1>
                 <div class="copylink">
                     <a href="javascript:;" class=""><span class="fa fa-copy"></span> 复制本页链接</a>
