--- a/Application/Admin/View/Datebase/import.html
+++ b/Application/Admin/View/Datebase/import.html
@@ -71,7 +71,7 @@
                             window.onbeforeunload = function(){ return null; }
                         }
                     }else{
-                        alertMessager(data.info, 'danger');
+                        $.alertMessager(data.info, 'danger');
                     }
                 }
             });
