--- a/Application/Home/View/default/Document/detail_default.html
+++ b/Application/Home/View/default/Document/detail_default.html
@@ -135,7 +135,7 @@
                             if(data.login == 1){
                                 $('#login-modal').modal(); //弹出登陆框
                             }else{
-                                alertMessager(data.info, 'danger');
+                                $.alertMessager(data.info, 'danger');
                             }
                         }
                     });
