优化：登录或注册报错后自动刷新验证码

--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -45,7 +45,7 @@
                             <span class="input-group-addon"><i class="fa fa-eye"></i></span>
                             <input type="text" class="form-control" name="verify" placeholder="请输入验证码">
                             <span class="input-group-addon verifyimg-box">
-                                <img class="verifyimg reloadverify" alt="验证码" src="{:U('verify')}" title="点击刷新">
+                                <img class="verifyimg reload-verify" alt="验证码" src="{:U('verify')}" title="点击刷新">
                             </span>
                         </div>
                     </div>
