--- a/Application/Home/View/default/User/register.html
+++ b/Application/Home/View/default/User/register.html
@@ -133,7 +133,7 @@
                                                 <span class="input-group-addon"><i class="fa fa-eye"></i></span>
                                                 <input type="text" class="form-control" name="verify" placeholder="请输入验证码">
                                                 <span class="input-group-addon verifyimg-box">
-                                                    <img class="verifyimg reloadverify" alt="验证码" src="{:U('verify')}" title="点击刷新">
+                                                    <img class="verifyimg reload-verify" alt="验证码" src="{:U('verify')}" title="点击刷新">
                                                 </span>
                                             </div>
                                         </div>
@@ -241,13 +241,12 @@
                 }
             }
 
-            //刷新验证码
-            var verifyimg = $(".verifyimg").attr("src");
-            $(".reloadverify").click(function(){
-                if( verifyimg.indexOf('?')>0){
-                    $(".verifyimg").attr("src", verifyimg+'&random='+Math.random());
-                }else{
-                    $(".verifyimg").attr("src", verifyimg.replace(/\?.*$/,'')+'?'+Math.random());
+            $(".reload-verify").on('click', function() {
+                var verifyimg = $(".verifyimg").attr("src");
+                if (verifyimg.indexOf('?') > 0) {
+                    $(".verifyimg").attr("src", verifyimg + '&random=' + Math.random());
+                } else {
+                    $(".verifyimg").attr("src", verifyimg.replace(/\?.*$/, '') + '?' + Math.random());
                 }
             });
 
