修复：FormBuilder表单项宽度

--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -43,6 +43,15 @@
 //
 // Builder表单样式
 .builder-form-box {
+    .builder-form-container {
+        // 表单项目宽度
+        .builder-form {
+            .input, .select, .textarea {
+                width: 50%;
+                max-width: 638px;
+            }
+        }
+    }
     .huploadify-upload {
         margin-bottom: 10px;
     }
