完善：FormBuilder单图单文件支持删除

--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -46,7 +46,7 @@
     .builder-form-container {
         // 表单项目宽度
         .builder-form {
-            .input, .select, .textarea {
+            .input, .select, .textarea, .img-box, .file-box {
                 width: 50%;
                 max-width: 638px;
             }
@@ -88,6 +88,8 @@
     }
     // 文件上传
     .file-box {
+        margin-top: 15px;
+
         .remove-file {
             color: red;
             position: absolute;
