修复：修复后台主题的样式适应新前端架构

--- a/Application/Admin/View/_Layout/_main.less
+++ b/Application/Admin/View/_Layout/_main.less
@@ -72,7 +72,7 @@
             }
             .panel-group {
                 .panel {
-                    border-bottom: 0px;
+                    border-top: 0px;
                     border-radius: 0px;
                     box-shadow: none;
 
@@ -91,8 +91,8 @@
                 .panel + .panel {
                     margin-top: 0px;
                 }
-                .panel:last-child {
-                    border-bottom: 1px solid #ddd !important;
+                .panel:first-child {
+                    border-top: 1px solid #ddd;
                 }
             }
         }
