--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.css?v={:C('STATIC_VERSION')}">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.min.css?v={:C('STATIC_VERSION')}">
     <link rel="stylesheet" type="text/css" href="__ADMIN_CSS__/{:C('ADMIN_THEME')}.css">
     <block name="style"></block>
     <script type="text/javascript" src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js"></script>
@@ -143,7 +143,7 @@
                     var $universalObject{$Think.CONTROLLER_NAME} = {<block name='universal'></block>};
                 </script>
             </div>
-            <script type="text/javascript" src="__PUBLIC__/js/admin.js?v={:C('STATIC_VERSION')}"></script>
+            <script type="text/javascript" src="__PUBLIC__/js/admin.min.js?v={:C('STATIC_VERSION')}"></script>
             <block name="script"></block>
         </div>
     </div>
