--- a/Application/Home/View/default/Comment/default.html
+++ b/Application/Home/View/default/Comment/default.html
@@ -34,7 +34,7 @@
                     <div class="text">{$vo.content}</div>
                     <div class="pictures">
                         <foreach name="vo.pictures" item="img">
-                            <a href="#"><img class="img-responsive" src="{$img|get_cover}" style="width:50px;height:50px;margin:5px 5px 5px 0px;border:1px solid #eee;"></a>
+                            <a href="#"><img class="img" src="{$img|get_cover}" style="width:50px;height:50px;margin:5px 5px 5px 0px;border:1px solid #eee;"></a>
                         </foreach>
                     </div>
                     <div class="small">
