--- a/Application/Home/View/default/Document/index_default.html
+++ b/Application/Home/View/default/Document/index_default.html
@@ -82,6 +82,7 @@
             <div class="col-xs-12 col-sm-3 form">
                 <a href="{:U('Document/add', array('cid' => $__CURRENT_CATEGORY__))}" class="btn btn-primary btn-block">发表</a>
                 <div class="blank"></div>
+                <div class="blank"></div>
 
                 <!-- 侧边导航 -->
                 <div class="list-group">
