--- a/Application/Home/View/default/UserMessage/index.html
+++ b/Application/Home/View/default/UserMessage/index.html
@@ -1,5 +1,14 @@
 <extend name="_Layout/main"/>
 
+<block name="style">
+    <style type="text/css">
+        .is_read,
+        .is_read a {
+            color: #ccc;
+        }
+    </style>
+</block>
+
 <block name="breadcrumb">
     <div class="container">
         <ul class="breadcrumb ">
@@ -11,7 +20,7 @@
 </block>
 
 <block name="main">
-    <div class="container">
+    <div class="container builder builder-list-box">
         <div class="row">
             <div class="col-xs-12 col-md-3">
                 <include file="User/side" /><!-- 包含用户中心侧边导航 -->
@@ -19,28 +28,47 @@
             <div class="col-xs-12 col-md-9">
                 <div class="box">
                     <ul class="nav-tabs nav">
-                        <li class="<php>if($__CURRENT_MESSAGE_TYPE == 0) echo 'active';</php>"><a href="{:U('UserMessage/index', array('type' => 0))}">系统消息</a></li>
-                        <li class="<php>if($__CURRENT_MESSAGE_TYPE == 1) echo 'active';</php>"><a href="{:U('UserMessage/index', array('type' => 1))}">评论消息</a></li>
-                        <li class="<php>if($__CURRENT_MESSAGE_TYPE == 2) echo 'active';</php>"><a href="{:U('UserMessage/index', array('type' => 2))}">私信消息</a></li>
+                        <volist name="message_type" id="type">
+                            <li class="<php>if($__CURRENT_MESSAGE_TYPE == $key) echo 'active';</php>">
+                                <a class="<php>if($new_message_type[$key]){echo 'red-dot';}</php>" href="{:U('UserMessage/index', array('type' => $key))}">系统消息</a>
+                            </li>
+                        </volist>
                     </ul>
+                    <div class="builder-toolbar builder-list-toolbar">
+                        <a class="btn btn-info ajax-post" target-form="ids" href="{:U('readAll', array('type' => $__CURRENT_MESSAGE_TYPE))}">设为已读</a>
+                    </div>
                     <div class="tab-content">
-                        <div class="list">
-                            <section class="items">
-                                <volist name="volist" id="vo">
-                                    <div class="item">
-                                        <div class="item-heading">
-                                            <h4>{$vo.title}</h4>
-                                            <notempty name="from_uid">
-                                                <a href="{:U('UserMessage/reply/id/'.$vo['id'])}" class="reply-action">回复</a>
-                                            </notempty>
-                                        </div>
-                                        <div class="item-footer">
-                                            <span class="text-muted">{$vo.ctime|time_format}</span>
-                                        </div>
-                                    </div>
-                                </volist>
-                            </section>
-                            <footer><ul class="pager pager-loose pager-pills">{$page}</ul></footer>
+                        <div class="builder-table">
+                            <div class="panel panel-default">
+                                <table class="table table-bordered table-responsive table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th><input class="check-all" type="checkbox"></th>
+                                            <th>消息</th>
+                                            <th>时间</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <volist name="message_list" id="vo">
+                                            <tr>
+                                                <td><input class="ids" type="checkbox" value="{$vo.id}" name="ids[]"></td>
+                                                <td><span class="<php>if($vo['is_read']){echo 'is_read';}</php>">{$vo.title}</span></td>
+                                                <td>{$vo.ctime|time_format}</td>
+                                            </tr>
+                                        </volist>
+                                        <empty name="message_list">
+                                            <tr class="builder-data-empty">
+                                                <td class="text-center empty-info" colspan="3">
+                                                    <i class="fa fa-database"></i> 暂时没有消息<br>
+                                                </td>
+                                            </tr>
+                                        </empty>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <notempty name="page">
+                                <ul class="pagination">{$page}</ul>
+                            </notempty>
                         </div>
                     </div>
                 </div>
