--- a/Public/libs/bootstrap_extend/css/bootstrap-extend.css
+++ b/Public/libs/bootstrap_extend/css/bootstrap-extend.css
@@ -17,7 +17,7 @@
 .red-dot {
     position: relative;
     display: inline-block;
-    padding: 0 6px;
+    padding-right: 6px;
 }
 .red-dot::after {
     content: '';
