升级： 文档模型架构升级 可自定义主要字段(不再共用标题字段)，可自定义后台文档列表显示字段。

--- a/Application/Home/View/default/Document/detail_default.html
+++ b/Application/Home/View/default/Document/detail_default.html
@@ -30,7 +30,7 @@
                 <article class="article">
                     <!-- 文章标题 -->
                     <div class="article-title">
-                        <h3 class="text-muted-5">{$info.title}</h3>
+                        <h3 class="text-muted-5">{$info.main_field}</h3>
                     </div>
                     <!-- 文章信息 -->
                     <div class="article-info text-muted">
