--- a/Application/Home/View/default/Document/index_default.html
+++ b/Application/Home/View/default/Document/index_default.html
@@ -60,7 +60,7 @@
                                 </a>
                             </div>
                             <div class="media-body">
-                                <h4 class="list-title text-overflow margin-top-none"><a href="{:U('Document/detail/id/'.$vo['id'])}">{$vo.title}</a></h4>
+                                <h4 class="list-title text-overflow margin-top-none"><a href="{:U('Document/detail/id/'.$vo['id'])}">{$vo.main_field}</a></h4>
                                 <ul class="list-info list-unstyled list-inline text-muted small">
                                     <li><i class="fa fa-calendar"></i> {$vo.ctime|time_format='Y-m-d'}</li>
                                     <li><i class="fa fa-eye"></i> {$vo.view}</li>
