优化：CoreThink改名部门怒刷一波存在感 上传、评论、标签相关数据表名、控制器名、模型名修改

--- a/Application/Home/View/default/Comment/default.html
+++ b/Application/Home/View/default/Comment/default.html
@@ -48,7 +48,7 @@
 <php>if(C('TOGGLE_USER_COMMENT')):</php>
     <div class="comment-box">
         <notempty name="__USER__">
-            <form action="{:U('UserComment/add')}" method="post" class="form comment-form">
+            <form action="{:U('PublicComment/add')}" method="post" class="form comment-form">
                 <div class="form-group">
                     <textarea name="content" class="form-control new-comment-text" rows="3" placeholder="评论是一种态度..."></textarea>
                 </div>
@@ -83,7 +83,7 @@
                     <script type="text/javascript">
                         $(function(){
                             $('#upload_comment_picture').Huploadify({
-                                uploader:'{:U("Upload/upload")}',
+                                uploader:'{:U("PublicUpload/upload")}',
                                 fileTypeExts:'*.gif;*.jpg;*.jpeg;*.png;*.bmp',
                                 fileSizeLimit:{:C('UPLOAD_IMAGE_SIZE')}*1024,
                                 buttonText:'<span class="fa fa-plus"></span>',
